# GPUProgramming

project/quiz_9/: CMakeLists.txt
project/quiz_9/Src/: New Text Document.txt  convolution.cpp
project/quiz_9/Src/stream/: quiz.cu
quiz_9/quiz_9/: CMakeLists.txt
quiz_9/quiz_9/Src/: CMakeLists.txt
quiz_9/quiz_9/Src/stream/: CMakeLists.txt  image_loader.cpp  image_loader.h  quiz.cu
quiz_9/quiz_9/trash/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj
quiz_9/quiz_9/trash/Src/: cmake_install.cmake
quiz_9/quiz_9/trash/Src/stream/: quiz.vcxproj
quiz_9/quiz_9/trash/Src/stream/quiz.dir/Debug/: quiz.cu.cache  quiz.cu446329596.deps
quiz_9/quiz_9/trash/Src/stream/quiz.dir/Debug/quiz.tlog/: CudaCompile.read.1u.tlog  CustomBuild.read.1.tlog  quiz.lastbuildstate
quiz_9/quiz_9/trash/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
quiz_9/quiz_9/trash2/: ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  cmake_install.cmake
quiz_9/quiz_9/trash3/: ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
quiz_9/quiz_9/trash3/Src/stream/: quiz.vcxproj  quiz.vcxproj.filters
quiz_9/quiz_9/trash3/Src/stream/quiz.dir/Debug/: quiz.cu.cache  quiz.cu446329596.deps
quiz_9/quiz_9/trash3/Src/stream/quiz.dir/Debug/quiz.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.read.1.tlog
quiz_9/quiz_9/trash3/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
quiz_9/quiz_9/trashy/: ALL_BUILD.vcxproj  CMakeCache.txt
quiz_9/quiz_9/trashy/Src/stream/: quiz.vcxproj  quiz.vcxproj.filters
quiz_9/quiz_9/trashy/Src/stream/quiz.dir/Debug/: quiz.cu.cache  quiz.cu446329596.deps
quiz_9/quiz_9/trashy/Src/stream/quiz.dir/Debug/quiz.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CustomBuild.write.1.tlog
quiz_9/quiz_9/trashy/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
